# wiki_engine

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  tmp  todo.md  todos
docker/: drop-schema.sql  drop-test-schema.sql  init-schema.sql
docker/pg/: Dockerfile
migrations/2023-05-03-235132_create_article/: up.sql
migrations/2023-05-04-000108_create_user_role/: down.sql  up.sql
migrations/2023-05-04-000109_create_user_account/: up.sql
migrations/2023-05-04-000110_create_article/: down.sql  up.sql
migrations/2023-05-04-000111_create_language/: down.sql  up.sql
migrations/2023-05-04-000112_create_article_language/: down.sql  up.sql
migrations/2023-05-04-001108_create_content/: down.sql  up.sql
migrations/2023-05-04-001109_create_article_version/: down.sql  up.sql
migrations/2023-05-04-001110_create_user_role/: up.sql
migrations/2023-05-04-001111_create_user_account/: up.sql
migrations/2023-05-04-001112_create_user_password/: down.sql  up.sql
migrations/2023-05-04-001113_create_user_otp/: down.sql  up.sql
scripts/: .utils.sh  cov.sh  launch_postgres.sh  reroll_postgres.sh  run_migrations.sh  test.sh  watch.sh
src/: launch.rs  main.rs  repository.rs  router.rs  service.rs
src/aggregation/: article.rs  article_language.rs  article_version.rs  image.rs  language.rs  mod.rs  user_account.rs  user_account_auth.rs  version_content.rs
src/authorization/: authorization.rs  mod.rs  permissions.rs
src/diff_handler/: diff_handler.rs  mod.rs
src/dtm/: mod.rs
src/dtm/article/: dto.rs  request_body.rs
src/dtm/article_language/: dto.rs  request_body.rs
src/dtm/article_version/: dto.rs  mod.rs  request_body.rs
src/dtm/auth/: dto.rs  mod.rs  request_body.rs
src/dtm/image/: dto.rs  request_body.rs
src/dtm_common/: jwt.rs  mod.rs  request_query.rs  response.rs
src/emailer/: emailer.rs  mod.rs
src/error/: error_wrapper.rs  formatted_error.rs  mod.rs
src/hasher/: hasher.rs  mod.rs
src/jwt_handler/: jwt.rs  jwt_handler.rs  mod.rs
src/mapper/: article.rs  article_language.rs  article_version.rs  language.rs  mod.rs  values_mapper.rs  version_content.rs
src/option_config/: mod.rs
src/repository/: connection.rs  db_schema.rs  mod.rs  module.rs  wrapper.rs
src/router/: article.rs  article_language.rs  article_version.rs  auth.rs  catchers.rs  image.rs  language.rs  mod.rs
src/schema/: article.rs  article_language.rs  article_version.rs  auth.rs  jwt.rs  language.rs  mod.rs  token.rs  user_role.rs  version_content.rs
src/service/: article.rs  article_language.rs  article_version.rs  auth.rs  image.rs  language.rs  mod.rs  version_content.rs
src/test/: article.rs  article_language.rs  article_version.rs  mod.rs
src/trait_common/: dto_convert.rs  mod.rs
(+84 files in other folders)
